--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "src",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hxnshaw/travel-log-api.git"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hxnshaw/travel-log-api/issues"
+  },
+  "homepage": "https://github.com/hxnshaw/travel-log-api#readme"
 }
